# neuro

./: CMakeLists.txt  README.md  need.md  pyproject.toml
examples/: add.py  scalar_example.py
neuro/: Digraph.gv  README.md  core.py  ex.py  example.py  graph  graphs.py  instr.py  neuro.py  nn.py  ops.py  t_ops.py  test  test.py
neuro.egg-info/: SOURCES.txt
neuro/codegen/: CMakeLists.txt  Makefile  README.md  bindings.cpp  gen.cpp  test.cpp
neuro/engine/: grad.py  test.py
neuro/myenv/: pyvenv.cfg
neuro/neuro.egg-info/: PKG-INFO
src/: README.md  distro.py  graph  neuro.py  test
tests/: README.md  benchmark.py  cpp.py  cpuBenchmark.py  logs.txt  numpyTest.py  stress.py  tensor_func.py  test  test.py  test2.py  tree.py
