[project]
name = "neuro"
version = "0.2.0"
description = "tensor operations LOL"
authors = [{ name = "Isaac", email = "justyour64@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["neuro"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
